--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -3,4 +3,11 @@ $mainblueColorpage: #2196f3;
 $mainblackColorpage: #212121; 
 $brandblackColor: #000;
 $maingrayColor:#757575;
-$mainwhiteColor: #ffffff
+$mainwhiteColor: #ffffff;
+$footerbackgroundcolor: rgba(47, 48, 58, 1); 
+$backgroundcolorourteam: #F5F4FA; 
+$ourcustomersgraycolor: #AFB1B8; 
+$bordercolorheader:#ECECEC; 
+$borderinfoworkswhitecolor:#EEEE; 
+$inputnewsleteremailcolorfooter:rgba(255, 255, 255, 0.60);
+$socialiconbackgroundcolorfooter: rgba(255, 255, 255, 0.1);
